--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,8 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.40"
     kapt "com.google.dagger:hilt-android-compiler:2.40"
 
+    //unknown
+    implementation 'androidx.fragment:fragment-ktx:1.5.0'
+
 
 }
